IRtest_out/bake_constant.err
irs/bake_constant.ll:7:34: error: integer constant must have integer type
@chg240 = global [3 x [3 x i32]] 1
                                 ^
1 error generated.
